allowedrepos/gatekeeper/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: tomcat
      image: tomcat
